--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
     "express": "~4.15.2",
+    "express-jwt": "^5.3.0",
     "jquery": "^3.2.1",
+    "jsonwebtoken": "^8.1.0",
     "mongodb": "^2.2.31",
+    "mongoose": "^4.12.3",
     "morgan": "~1.8.1",
     "node-uuid": "^1.4.8",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "~2.0.0-beta11",
     "request": "^2.81.0",
     "serve-favicon": "~2.4.2",
